most styles good, some minor alignment issues still outstanding

--- a/app/sass/_base.scss
+++ b/app/sass/_base.scss
@@ -89,6 +89,7 @@ nav {
   padding: 20px 20px 20px 20px;
 }
 .icon-plus {
+  text-align: last;
   padding: 20px 20px 20px 20px;
 }
 header {
@@ -127,26 +128,25 @@ h2 {
   padding: 20px 20px 20px 20px;
 }
 input {
-  width: 100px;
-  height: 50px;
+  width: 120px;
+  height: 40px;
   color: $color-scheme5;
   background-color: $color-scheme1;
   border: none;
   border-radius: 10px;
-  font-size: 100%;
-  display: block;
-  margin-left: 30px;
+  font-size: 80%;
   margin-bottom: 10px;
-  text-align: center;
+  padding: 10px 10px 10px 10px;
 }
 li {
   width: 88%;
-  height: 160px;
+  height: 120px;
   background-color: $color-scheme4;
   list-style-type: none;
   font-size: 24px;
   font-weight: 300;
+  text-align: left;
   padding: 10px 10px 10px 20px;
   margin: 10px 10px 2px 2px;
-  box-shadow: 0 5px 1px $color-scheme9;
+  box-shadow: 1px 5px 2px $color-scheme9;
 }
